--- a/extension/manifest.json
+++ b/extension/manifest.json
@@ -1,19 +1,23 @@
 {
-  "manifest_version": 2,
-
-  "name": "List Builder for Twitter",
-  "description": "Build Twitter from any timeline view.",
+  "name": "Twitter List Builder",
   "version": "0.1",
-  "permissions": [
-  ],
-  "browser_action": {
+  "description": "Build Twitter list from any timeline view.",
+  "icons": {
+
+  },
+  "permissions": [ "https://twitter.com/*" ],
+  "page_action": {
     "default_icon": "images/icon.png",
+    "default_title": "Twitter List Builder",      // optional; shown in tooltip
     "default_popup": "popup.html"
   },
   "content_scripts": [
     {
       "matches": ["https://*.twitter.com/*"],
-      "js": ["js/jquery-2.1.0.min.js", "js/main.js"]
+      "js": ["js/jquery-2.1.0.min.js", "js/jquery-ui.min.js", "js/main.js"],
+      "css": ["css/jquery-ui.min.css","css/main.css"]
     }
-  ]
+  ],
+  "options_page": "options.html",
+  "manifest_version": 2
 }
