--- a/extension/manifest.json
+++ b/extension/manifest.json
@@ -14,8 +14,8 @@
   "content_scripts": [
     {
       "matches": ["https://*.twitter.com/*"],
-      "js": ["js/jquery-2.1.0.min.js", "js/jquery-ui.min.js", "js/main.js"],
-      "css": ["css/jquery-ui.min.css","css/main.css"]
+      "js": ["js/jquery-2.1.0.min.js", "js/main.js"],
+      "css": ["css/main.css"]
     }
   ],
   "manifest_version": 2
