--- a/extension/manifest.json
+++ b/extension/manifest.json
@@ -19,7 +19,7 @@
   "content_scripts": [
     {
       "matches": ["https://*.twitter.com/*"],
-      "js": ["js/jquery-2.1.0.min.js", "js/main.js"],
+      "js": ["js/jquery-2.1.0.min.js", "js/mutation-summary.js", "js/main.js"],
       "css": ["css/main.css"]
     }
   ],
