--- a/extension/manifest.json
+++ b/extension/manifest.json
@@ -1,7 +1,8 @@
 {
-  "name": "Twitter List Builder",
+  "manifest_version": 2,
+  "name": "List Builder for Twitter",
+  "description": "Quickly build Twitter lists from any timeline view.",
   "version": "0.1",
-  "description": "Build Twitter list from any timeline view.",
   "background": {
     "scripts": ["js/background.js"],
     "persistent": false
@@ -13,7 +14,7 @@
   },
   "page_action": {
     "default_icon": "images/icon.png",
-    "default_title": "Twitter List Builder",
+    "default_title": "List Builder",
     "default_popup": "popup.html"
   },
   "content_scripts": [
@@ -22,6 +23,5 @@
       "js": ["js/jquery-2.1.0.min.js", "js/mutation-summary.js", "js/main.js"],
       "css": ["css/main.css"]
     }
-  ],
-  "manifest_version": 2
+  ]
 }
