--- a/extension/manifest.json
+++ b/extension/manifest.json
@@ -10,10 +10,13 @@
   "permissions" : [
       "declarativeContent"
   ],
-  "icons" : {
+  "icons": {
+    "16": "images/icon16.png",
+    "48": "images/icon48.png",
+    "128": "images/icon128.png"
   },
   "page_action": {
-    "default_icon": "images/icon.png",
+    "default_icon": "images/icon16.png",
     "default_title": "List Builder",
     "default_popup": "popup.html"
   },
